refactor: 사이드바 구독 파트 변경 update commit

--- a/index.html
+++ b/index.html
@@ -100,13 +100,63 @@
   <!--사이드바3-->
   <ul>
     <li style="margin-bottom: 5px">&nbsp;&nbsp;구독</li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 1<img class="stream" src="stream.png"></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 2<!--<img class="stream" src="/stream.png">--></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 3<img class="stream" src="stream.png"></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 4<!--<img class="stream" src="/stream.png">--></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 5<img class="stream" src="stream.png"></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 6<!--<img class="stream" src="/stream.png">--></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="">OFFICIAL_NELL<img class="stream" src="stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="">Bring Me The Horizon<!--<img class="stream" src="/stream.png">--></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/sub-not.jpg" alt="">Nothing But Thieves<img class="stream" src="stream.png"></button></li>
   </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바4-->
+  <ul>
+    <li style="margin-bottom: 5px">&nbsp;&nbsp;탐색</li>
+    <li><button><i class="fa-solid fa-cart-shopping"></i> 쇼핑 </button></li>
+    <li><button><i class="fa-solid fa-music"></i> 음악 </button></li>
+    <li><button><i class="fa-solid fa-film"></i> 영화 </button></li>
+    <li><button><i class="fa-solid fa-signal"></i> 실시간 </button></li>
+    <li><button><i class="fa-solid fa-gamepad"></i> 게임 </button></li>
+    <li><button><i class="fa-solid fa-basketball"></i> 스포츠 </button></li>
+    <li><button><i class="fa-solid fa-graduation-cap"></i> 학습 프로그램 </button></li>
+    <li><button><i class="fa-solid fa-podcast"></i> 팟캐스트</button></li>
+  </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바5-->
+  <ul>
+    <li style="margin-bottom: 5px">&nbsp;&nbsp;YouTube 더보기</li>
+    <li><button><i class="fa-solid fa-video"></i> YouTube 스튜디오 </button></li>
+    <li><button><i class="fa-solid fa-music"></i> YouTube Music </button></li>
+    <li><button><i class="fa-solid fa-child-reaching"></i> YouTube Kids </button></li>
+  </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바6-->
+  <ul>
+    <li ><button><i class="fa-solid fa-gear"></i> 설정 </button></li>
+    <li><button><i class="fa-solid fa-flag"></i> 신고 기록 </button></li>
+    <li><button><i class="fa-solid fa-circle-question"></i> 고객센터 </button></li>
+    <li><button><i class="fa-regular fa-comment-dots"></i> 의견 보내기 </button></li>
+  </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <pre style="color: #777777">
+ 정보 보도자료 저작권 문의하기
+ 크리에이터광고개발자
+ 약관 개인정보처리방침
+ 정책 및 안전
+ YouTube 작동의 원리
+ 새로운 기능 테스트하기</pre>
+  <pre style="font-size: 10px; color: #555555">
+ © 2025 Google LLC, Sundar Pichai,
+ 1600 Amphitheatre Parkway,
+ Mountain View CA 94043, USA,
+ 0807-882-594 (무료), yt-support-
+ solutions-kr@google.com, 호스팅:
+ Google LLC, <a href="#" style="text-decoration: none; font-size: 11px; color: dodgerblue" >사업자정보</a>, <a href="#" style="text-decoration: none; font-size: 11px; color: dodgerblue">불법촬영물 신
+ 고</a>
+ 크리에이터들이 유튜브 상에 게시, 태그
+ 또는 추천한 상품들은 판매자들의 약관에
+ 따라 판매됩니다. 유튜브는 이러한 제품들
+ 을 판매하지 않으며, 그에 대한 책임을 지
+ 지 않습니다.
+
+
+  </pre>
 </nav>
 
 <!--사이드바v2-->
