feat: 구독 페이지 add commit

--- a/subscribe.html
+++ b/subscribe.html
@@ -16,7 +16,7 @@
   <div class="menu-bar">
     <div class="left-menu">
       <p id="maintop1">최신순</p>
-      <p id="maintop2">모든 구독 채널</p>
+<!--      <p id="maintop2">모든 구독 채널</p>-->
     </div>
     <div class="right-menu">
       <button class="rm-btn" id="manage-btn"><p style="margin-bottom: 0">관리</p></button>
@@ -25,7 +25,7 @@
     </div>
   </div>
   <!--  썸네일 리스트1-->
-    <div class="content" >
+    <div class="content" data-id="9" >
       <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/moon-nell.png" alt="썸네일 사진">
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="작성자">
@@ -37,7 +37,7 @@
       </div>
     </div>
     <!--  썸네일 리스트2-->
-    <div class="content" >
+    <div class="content" data-id="10">
       <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/lost-bring.png" alt="썸네일 사진">
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="작성자">
@@ -49,7 +49,7 @@
       </div>
     </div>
     <!--  썸네일 리스트3-->
-    <div class="content" >
+    <div class="content" data-id="11">
       <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/kool-bring.png" alt="썸네일 사진">
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="작성자">
@@ -61,7 +61,7 @@
       </div>
     </div>
     <!--  썸네일 리스트4-->
-    <div class="content" >
+    <div class="content" data-id="12">
       <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/itch-not.png" alt="썸네일 사진">
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-not.jpg" alt="작성자">
@@ -73,7 +73,7 @@
       </div>
     </div>
     <!--  썸네일 리스트5-->
-    <div class="content" >
+    <div class="content" data-id="13">
       <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/high-not.png" alt="썸네일 사진">
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-not.jpg" alt="작성자">
@@ -85,7 +85,7 @@
       </div>
     </div>
     <!--  썸네일 리스트6-->
-    <div class="content" >
+    <div class="content" data-id="14">
       <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/glow-nell.png" alt="썸네일 사진">
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="작성자">
@@ -144,6 +144,7 @@
 <!--  </div>-->
 </main>
 
-<script src="Project/Home/js/home.js"></script>
+<script src="Project/Home/js/subscribe.js"></script>
+<!--<script src="Project/Video/js/video_2.js"></script>-->
 </body>
 </html>
