--- a/index.html
+++ b/index.html
@@ -293,5 +293,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="Project/Home/js/home.js"></script>
+<!--<script src="Project/Home/js/subscribe.js"></script>-->
 </body>
 </html>
