feat: thumbnail preview add commit

--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
 <main id="main-container">
 <!--  썸네일 리스트1-->
 
-  <div class="content" data-id="1">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1.png" alt="썸네일 사진">
+  <div class="content" data-id="1" data-video="Nf5TvCCoUAs">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/1-c.jpg" alt="작성자">
       <div class="video-info">
@@ -192,8 +194,10 @@
   </div>
 
   <!--  썸네일 리스트2-->
-  <div class="content" data-id="2">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2.png" alt="썸네일 사진">
+  <div class="content" data-id="2" data-video="42dPcnz1RPw">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/2-c.jpg" alt="작성자">
       <div class="video-info">
@@ -205,8 +209,10 @@
   </div>
 
   <!--  썸네일 리스트3-->
-  <div class="content" data-id="3">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3.png" alt="썸네일 사진">
+  <div class="content" data-id="3" data-video="As-lHM6emmk">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/3-c.jpg" alt="작성자">
       <div class="video-info">
@@ -219,8 +225,10 @@
 
   <!--  썸네일 리스트4-->
 
-  <div class="content" data-id="4">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/4.png" alt="썸네일 사진">
+  <div class="content" data-id="4" data-video="rNjxjnl0LXY">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/4.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/4-c.jpg" alt="작성자">
       <div class="video-info">
@@ -233,8 +241,10 @@
 
   <!--  썸네일 리스트5-->
 
-  <div class="content" data-id="5">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/5.png" alt="썸네일 사진">
+  <div class="content" data-id="5" data-video="xrULJRwYgOE">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/5.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/5-c.jpg" alt="작성자">
       <div class="video-info">
@@ -247,8 +257,10 @@
 
   <!--  썸네일 리스트6-->
 
-  <div class="content" data-id="6">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/6.png" alt="썸네일 사진">
+  <div class="content" data-id="6" data-video="8gPaUgSO8zQ">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/6.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/6-c.jpg" alt="작성자">
       <div class="video-info">
@@ -261,8 +273,10 @@
 
   <!--  썸네일 리스트7-->
 
-  <div class="content" data-id="7">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/7.png" alt="썸네일 사진">
+  <div class="content" data-id="7" data-video="-8JTwRH23VY">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/7.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/7-c.jpg" alt="작성자">
       <div class="video-info">
@@ -275,8 +289,10 @@
 
   <!--  썸네일 리스트8-->
 
-  <div class="content" data-id="8">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/8.png" alt="썸네일 사진">
+  <div class="content" data-id="8" data-video="KsX0iJGME4I">
+    <div class="video-container">
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/8.png" alt="썸네일 사진">
+    </div>
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/8-c.jpg" alt="작성자">
       <div class="video-info">
