--- a/subscribe.html
+++ b/subscribe.html
@@ -25,8 +25,10 @@
     </div>
   </div>
   <!--  썸네일 리스트1-->
-    <div class="content" data-id="9" >
-      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/moon-nell.png" alt="썸네일 사진">
+    <div class="content" data-id="9" data-video="CB44b45kMhA">
+      <div class="video-container">
+        <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/moon-nell.png" alt="썸네일 사진">
+      </div>
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="작성자">
         <div class="video-info">
@@ -37,8 +39,10 @@
       </div>
     </div>
     <!--  썸네일 리스트2-->
-    <div class="content" data-id="10">
-      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/lost-bring.png" alt="썸네일 사진">
+    <div class="content" data-id="10" data-video="L6tHMDaGgho">
+      <div class="video-container">
+        <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/lost-bring.png" alt="썸네일 사진">
+      </div>
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="작성자">
         <div class="video-info">
@@ -49,8 +53,10 @@
       </div>
     </div>
     <!--  썸네일 리스트3-->
-    <div class="content" data-id="11">
-      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/kool-bring.png" alt="썸네일 사진">
+    <div class="content" data-id="11" data-video="YyacCX-CFUM">
+      <div class="video-container">
+        <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/kool-bring.png" alt="썸네일 사진">
+      </div>
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="작성자">
         <div class="video-info">
@@ -61,8 +67,10 @@
       </div>
     </div>
     <!--  썸네일 리스트4-->
-    <div class="content" data-id="12">
-      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/itch-not.png" alt="썸네일 사진">
+    <div class="content" data-id="12" data-video="vM8aBTApYyU">
+      <div class="video-container">
+        <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/itch-not.png" alt="썸네일 사진">
+      </div>
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-not.jpg" alt="작성자">
         <div class="video-info">
@@ -73,8 +81,10 @@
       </div>
     </div>
     <!--  썸네일 리스트5-->
-    <div class="content" data-id="13">
-      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/high-not.png" alt="썸네일 사진">
+    <div class="content" data-id="13" data-video="p8aWkWZOlB8">
+      <div class="video-container">
+        <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/high-not.png" alt="썸네일 사진">
+      </div>
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-not.jpg" alt="작성자">
         <div class="video-info">
@@ -85,8 +95,10 @@
       </div>
     </div>
     <!--  썸네일 리스트6-->
-    <div class="content" data-id="14">
-      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/glow-nell.png" alt="썸네일 사진">
+    <div class="content" data-id="14" data-video="0Zji9QkT8O0">
+      <div class="video-container">
+        <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/glow-nell.png" alt="썸네일 사진">
+      </div>
       <div class="video-meta">
         <img class="producer-img" src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="작성자">
         <div class="video-info">
